Sun Jan 31 18:27:42 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* file-utimes.c (netfs_S_file_utimes): Understand new semantics
	for setting to current time.
	* netfs.h (netfs_attempt_utimes): Update documentation.

1999-01-22  Roland McGrath  <roland@baalperazim.frob.com>

	* file-set-translator.c: Remove makedev, major, minor macro definition.
	* dir-lookup.c: Likewise.

1998-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* file-get-fs-options.c (netfs_S_file_get_fs_options):
	fshelp_return_malloced_buffer renamed to iohelp_*.
	* fsys-get-options.c (netfs_S_fsys_get_options): Likewise.

Tue Jul 14 16:30:48 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>

	* dir-lookup.c (netfs_S_dir_lookup): Don't require the node to be
	a directory in the null pathname case.

1997-09-09  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-lookup.c (netfs_S_dir_lookup): Fix type signature of
	short_circuited_callback1.

1997-09-05  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-lookup.c (netfs_S_dir_lookup): Re-aquire the lock on DNP when
	looping to follow a symlink.

1997-08-29  Miles Bader  <miles@gnu.ai.mit.edu>

	* file-reparent.c (netfs_S_file_reparent): Use a copy of
	CRED->user when creating NEW_CRED.

1997-08-28  Miles Bader  <miles@gnu.ai.mit.edu>

	* dir-lookup.c (netfs_S_dir_lookup): Don't lock DNP or assume it's
	locked when it shouldn't be.

Wed Aug 20 14:05:38 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* init-loop.c (netfs_server_loop): New args for
	ports_manage_port_operations_multithread.

Mon Jul  7 16:25:49 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* file-exec.c: Include <fcntl.h> instead of <fcntlbits.h>.
  	Suggested by Marcus G. Daniels (marcus@cathcart.sysc.pdx.edu).

1997-06-11  Miles Bader  <miles@gnu.ai.mit.edu>

	* trans-callback.c, set-get-trans.c: New files.
	* Makefile (OTHERSRCS): Add trans-callback.c & set-get-trans.c.

1997-06-09  Miles Bader  <miles@gnu.ai.mit.edu>

	* netfs.h (struct node): Remove istranslated field.