@@ -1,3 +1,8 @@
+Tue Feb 16 05:37:03 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* io-revoke.c: New file.
+	* Makefile (IOSRCS): Add iorevoke.c.
+
 Sun Jan 31 18:27:42 1999  Thomas Bushnell, BSG  <tb@mit.edu>
 
 	* file-utimes.c (netfs_S_file_utimes): Understand new semantics
